--- a/public/lab_1/index.html
+++ b/public/lab_1/index.html
@@ -1,5 +1,5 @@
 <title>Tyson Nguyen Lab 1</title>
-<h1>Tyson Nguysn Lab 1</h1>
+<h1>Tyson Nguyen Lab 1</h1>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f3/The_dogs_of_Boytown_%281918%29_%2814755445662%29.jpg/243px-The_dogs_of_Boytown_%281918%29_%2814755445662%29.jpg" alt="">
 <ul>
     <li>1</li>
